fixed formatting, authors and license headers
Signed-off-by: Marin Mitev <marin.mitev@gmail.com>